@@ -1,4 +1,4 @@
-.TH SMP_DISCOVER_LIST "8" "February 2018" "smp_utils\-0.99" SMP_UTILS
+.TH SMP_DISCOVER_LIST "8" "October 2021" "smp_utils\-1.00" SMP_UTILS
 .SH NAME
 smp_discover_list \- invoke DISCOVER LIST SMP function
 .SH SYNOPSIS
@@ -59,6 +59,17 @@ the \fI\-\-brief\fR option is given or implied. Of the three the attached
 phy capability field is probably the most interesting. If the
 \fI\-\-verbose\fR option is given, then the various "G" identifiers are
 expanded (e.g. instead of "G4:" it prints "G4 (12 Gbps):").
+.br
+When this option is used with single line per phy output, then the speed
+capabilities of each attached phy is checked. If the speed capabilities
+of an attached phy is greater than that of the expander phy, then that is
+noted. For example if a G5 (22.5 Gbps) HBA is attached to a G4 (12 Gbps)
+expander then lines in the expander's discovery output associated with the
+attached HBA will have "[att: 22.5 G capable]" appended to them. The phy
+capabilities fields that this check relies on are not available when short
+format descriptor type is chosen. So if the \fI\-\-descriptor=1\fR option
+has not been given explicitly, then descriptor type 0 (i.e. long format)
+is chosen.
 .TP
 \fB\-d\fR, \fB\-\-descriptor\fR=\fITY\fR
 set the "descriptor type" field in the request. When \fITY\fR is 0 then the
@@ -245,7 +256,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2018 Douglas Gilbert
+Copyright \(co 2006\-2021 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
